--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(myTarGetCampaignList)
 export(myTarGetClientList)
 export(myTarGetStats)
 export(myTarGetTotalStats)
+import(lubridate)
 importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,stop_for_status)
