--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,4 +6,5 @@ Date: 2016-10-31
 Author: Who wrote it
 Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
+Imports: utils, httr, stringr
 License: What license is it under?
