--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: rmytarget
 Type: Package
-Title: What the package does (short line)
-Version: 1.1
+Title: R interface to MyTarget API.
+Version: 1.2
 Date: 2016-10-31
 Author: Who wrote it
 Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
+Description: Load all markting objects and statistic from MyTarget API into R.
 Imports: utils, httr, stringr
 License: What license is it under?
