--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,5 @@ importFrom(httr,content)
 importFrom(httr,add_headers)
 importFrom(lubridate,day)
 importFrom(lubridate,month)
+importFrom(stringr,str_interp)
 importFrom(lubridate,year)
