--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ export(myTarRefreshToken)
 export(myTarGetCampaignList)
 export(myTarGetClientList)
 export(myTarGetStats)
+export(myTarGetAdList)
 export(myTarGetTotalStats)
 import(lubridate)
 importFrom(httr,GET)
