--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: rmytarget
 Type: Package
 Title: R interface to MyTarget API.
-Version: 1.2
+Version: 1.3
 Date: 2016-10-31
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
+Author: Alexey Seleznev
+Maintainer: Alexey Seleznev <selesnow@gmail.com>
 Description: Load all markting objects and statistic from MyTarget API into R.
 Imports: utils, httr, stringr
 License: What license is it under?
