--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,stop_for_status)
 importFrom(httr,content)
+importFrom(httr,content_type)
 importFrom(httr,add_headers)
 importFrom(lubridate,day)
 importFrom(lubridate,month)
