--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,9 @@
 Package: rmytarget
 Type: Package
-Title: R interface to MyTarget API.
-Version: 1.6.0
+Title: What the package does (short line)
+Version: 1.1
 Date: 2016-10-31
-Author: Alexey Seleznev
-Maintainer: Alexey Seleznev <selesnow@gmail.com>
-Description: Load all markting objects and statistic from MyTarget API into R.
-Imports: utils, httr, stringr
+Author: Who wrote it
+Maintainer: Who to complain to <yourfault@somewhere.net>
+Description: More about what it does (maybe more than one line)
 License: What license is it under?
