--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,10 +1,10 @@
 export(myTarAuth)
 export(myTarRefreshToken)
 export(myTarGetCampaignList)
+export(myTarGetAdList)
 export(myTarGetClientList)
 export(myTarGetStats)
 export(myTarGetTotalStats)
-import(lubridate)
 importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,stop_for_status)
