--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,3 +14,4 @@ importFrom(httr,add_headers)
 importFrom(lubridate,day)
 importFrom(lubridate,month)
 importFrom(lubridate,year)
+importFrom(stringr, str_interp)
