--- a/utf8/DESCRIPTION
+++ b/utf8/DESCRIPTION
@@ -1,9 +1,14 @@
 Package: rmytarget
 Type: Package
-Title: What the package does (short line)
-Version: 1.0
-Date: 2016-10-31
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Title: Load Data From MyTarget API
+Version: 1.1
+Date: 2018-08-17
+Author: Alexey Seleznev
+Maintainer: Alexey Seleznev <selesnow@gmail.com>
+Description: Allows work with MyTarget API <https://target.my.com/adv/api-marketing/> and
+    load data by ads, campaings and statistic from
+    your ads account.
+URL: http://selesnow.github.io/rmytarget
+Imports: httr, jsonlite, dplyr, lubridate, stringr
+Depends: R (>= 3.5.0)
+License: GPL-2
