--- a/utf8/NAMESPACE
+++ b/utf8/NAMESPACE
@@ -1,15 +1,17 @@
 export(myTarAuth)
 export(myTarRefreshToken)
 export(myTarGetCampaignList)
+export(myTarGetAdList)
 export(myTarGetClientList)
 export(myTarGetStats)
 export(myTarGetTotalStats)
-import(lubridate)
 importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,stop_for_status)
 importFrom(httr,content)
+importFrom(httr,content_type)
 importFrom(httr,add_headers)
 importFrom(lubridate,day)
 importFrom(lubridate,month)
 importFrom(lubridate,year)
+importFrom(stringr, str_interp)
