--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,15 @@ export(myTarGetAdList)
 export(myTarGetClientList)
 export(myTarGetStats)
 export(myTarGetTotalStats)
-importFrom(httr,GET)
-importFrom(httr,POST)
-importFrom(httr,stop_for_status)
-importFrom(httr,content)
-importFrom(httr,content_type)
-importFrom(httr,add_headers)
-importFrom(lubridate,day)
-importFrom(lubridate,month)
-importFrom(lubridate,year)
+importFrom(httr, GET)
+importFrom(httr, POST)
+importFrom(httr, stop_for_status)
+importFrom(httr, content)
+importFrom(httr, content_type)
+importFrom(httr, add_headers)
+importFrom(lubridate, day)
+importFrom(lubridate, month)
+importFrom(lubridate, year)
 importFrom(stringr, str_interp)
+importFrom("stats", "runif")
+importFrom("utils", "browseURL")
