--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: rmytarget
 Type: Package
 Title: Load Data from 'MyTarget API'
-Version: 1.1.1
-Date: 2018-09-12
+Version: 2.0.1
+Date: 2018-11-21
 Author: Alexey Seleznev
 Maintainer: Alexey Seleznev <selesnow@gmail.com>
-Description: Allows work with 'MyTarget API' <https://target.my.com/adv/api-marketing/> and
-    load data by ads, campaigns and statistic from
+Description: Allows work with 'MyTarget API v2' <https://target.my.com/doc/apiv2/ru/detailed.html> and
+    load data by ads, campaigns, agency clients and statistic from
     your ads account.
 URL: http://selesnow.github.io/rmytarget
 Imports: httr, jsonlite, dplyr, lubridate, stringr
