--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,9 +5,8 @@ Version: 2.1.0
 Date: 2018-12-19
 Author: Alexey Seleznev
 Maintainer: Alexey Seleznev <selesnow@gmail.com>
-Description: Allows work with 'MyTarget API v2' <https://target.my.com/doc/apiv2/ru/detailed.html> and
-    load data by ads, campaigns, agency clients and statistic from
-    your ads account.
+Description: Allows work with 'MyTarget API v2' <https://target.my.com/doc/apiv2/ru/detailed.html> and 
+    load data by ads, campaigns, agency clients and statistic from your ads account.
 URL: http://selesnow.github.io/rmytarget
 Imports: httr, jsonlite, dplyr, lubridate, stringr
 Depends: R (>= 3.5.0)
