--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,16 @@
 Package: rmytarget
 Type: Package
-Title: Load Data from 'MyTarget API'
-Version: 2.1.0
-Date: 2018-12-19
+Title: Load Data from 'MyTarget API v2'
+Version: 2.1.2
+Date: 2019-01-03
 Author: Alexey Seleznev
 Maintainer: Alexey Seleznev <selesnow@gmail.com>
-Description: Allows work with 'MyTarget API v2' <https://target.my.com/doc/apiv2/ru/detailed.html> and 
-    load data by ads, campaigns, agency clients and statistic from your ads account.
+Description: Allows work with 'MyTarget API v2' 
+	<https://target.my.com/doc/apiv2/ru/detailed.html> and
+	load data by ads, campaigns, agency clients and statistic from
+	your ads account.
 URL: http://selesnow.github.io/rmytarget
-Imports: httr, jsonlite, dplyr, lubridate, stringr
+Imports: httr, dplyr, lubridate, stringr
 Depends: R (>= 3.5.0)
 License: GPL-2
 Encoding: UTF-8
