--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: rmytarget
 Type: Package
 Title: Load Data from 'MyTarget API v2'
-Version: 2.1.5
-Date: 2019-03-07
+Version: 2.1.6
+Date: 2019-03-12
 Author: Alexey Seleznev
 Maintainer: Alexey Seleznev <selesnow@gmail.com>
 Description: Allows work with 'MyTarget API v2' 
@@ -10,7 +10,7 @@ Description: Allows work with 'MyTarget API v2'
 	load data by ads, campaigns, agency clients and statistic from
 	your ads account.
 URL: http://selesnow.github.io/rmytarget
-Imports: httr, dplyr, lubridate, stringr
+Imports: httr, dplyr, lubridate, stringr, purrr
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
 Depends: R (>= 3.5.0)
