Добавлена поддержки API статики v3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(myTarGetCampaignList)
 export(myTarGetAdList)
 export(myTarGetClientList)
 export(myTarGetStats)
+export(myTarGetGoalsStats)
 importFrom(httr, GET)
 importFrom(httr, POST)
 importFrom(httr, stop_for_status)
@@ -16,6 +17,11 @@ importFrom(lubridate, year)
 importFrom(dplyr, bind_rows)
 importFrom(dplyr, left_join)
 importFrom(dplyr, bind_cols)
+importFrom(dplyr, tibble)
+importFrom(dplyr, select)
+importFrom(dplyr, "%>%")
+importFrom(tidyr, unnest_wider)
+importFrom(tidyr, unnest_longer)
 importFrom(stats, setNames)
 importFrom(stringr, str_interp)
 importFrom(stats, runif)
