--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,27 @@
 Package: rmytarget
 Type: Package
-Title: Load Data from 'MyTarget API v2'
-Version: 2.1.9
-Date: 2020-06-11
-Author: Alexey Seleznev
+Title: Load Data from 'MyTarget API v2 and v3'
+Version: 2.2.0
+Date: 2021-09-06
+Authors@R: 
+    c(person(given  = "Alexey",
+             family = "Seleznev",
+             role   = c("aut", "cre"),
+             email  = "selesnow@gmail.com",
+             comment = c(ORCID = "0000-0003-0410-7385")),
+      person(given = "Netpeak",
+             role = c("cph")))
 Maintainer: Alexey Seleznev <selesnow@gmail.com>
 Description: Allows work with 'MyTarget API v2' 
-	<https://target.my.com/doc/apiv2/ru/detailed.html> and
+	<https://target.my.com/doc/apiv2/ru/detailed.html> and 'MyTarget API v3'
+	<https://target.my.com/adv/api-marketing/doc/stat-v2#statisticsv3>
 	load data by ads, campaigns, agency clients and statistic from
 	your ads account.
 URL: http://selesnow.github.io/rmytarget
-Imports: httr, dplyr, lubridate, stringr, purrr
+Imports: httr, dplyr, lubridate, stringr, purrr, tidyr
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
 Depends: R (>= 3.5.0)
-License: GPL-2
+License: MIT + file LICENSE
 Language: ru
 Encoding: UTF-8
