--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(myTarGetAdList)
 export(myTarGetClientList)
 export(myTarGetStats)
 export(myTarGetGoalsStats)
+export(myTarGetGoalList)
 importFrom(httr, GET)
 importFrom(httr, POST)
 importFrom(httr, stop_for_status)
