--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,11 +13,11 @@ Authors@R:
              role = c("cph")))
 Maintainer: Alexey Seleznev <selesnow@gmail.com>
 Description: Allows work with 'MyTarget API v2' 
-	<https://target.my.com/doc/apiv2/ru/detailed.html> and 'MyTarget API v3'
+	<https://target.my.com/doc/api/> and 'MyTarget API v3'
 	<https://target.my.com/adv/api-marketing/doc/stat-v2#statisticsv3>
 	load data by ads, campaigns, agency clients and statistic from
 	your ads account.
-URL: http://selesnow.github.io/rmytarget
+URL: https://selesnow.github.io/rmytarget/
 Imports: httr, dplyr, lubridate, stringr, purrr, tidyr
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
