--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,9 @@ export(myTarGetClientList)
 export(myTarGetStats)
 export(myTarGetGoalsStats)
 export(myTarGetGoalList)
+export(myTarGetFastStats)
+export(myTarGetInAppStats)
+export(myTarGetOfflineConversionsStats)
 importFrom(httr, GET)
 importFrom(httr, POST)
 importFrom(httr, stop_for_status)
@@ -20,6 +23,11 @@ importFrom(dplyr, left_join)
 importFrom(dplyr, bind_cols)
 importFrom(dplyr, tibble)
 importFrom(dplyr, select)
+importFrom(dplyr, left_join)
+importFrom(dplyr, group_by)
+importFrom(dplyr, summarise)
+importFrom(dplyr, filter)
+importFrom(dplyr, mutate)
 importFrom(dplyr, "%>%")
 importFrom(tidyr, unnest_wider)
 importFrom(tidyr, unnest_longer)
