--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: rmytarget
 Type: Package
 Title: Load Data from 'MyTarget API v2 and v3'
-Version: 2.3.1
-Date: 2021-09-08
+Version: 2.4.0
+Date: 2021-10-17
 Authors@R: 
     c(person(given  = "Alexey",
              family = "Seleznev",
@@ -13,11 +13,11 @@ Authors@R:
              role = c("cph")))
 Maintainer: Alexey Seleznev <selesnow@gmail.com>
 Description: Allows work with 'MyTarget API v2' 
-	<https://target.my.com/doc/api/> and 'MyTarget API v3'
+	<https://target.my.com/doc/apiv2/ru/detailed.html> and 'MyTarget API v3'
 	<https://target.my.com/adv/api-marketing/doc/stat-v2#statisticsv3>
 	load data by ads, campaigns, agency clients and statistic from
 	your ads account.
-URL: https://selesnow.github.io/rmytarget/
+URL: http://selesnow.github.io/rmytarget
 Imports: httr, dplyr, lubridate, stringr, purrr, tidyr
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
@@ -25,3 +25,4 @@ Depends: R (>= 3.5.0)
 License: MIT + file LICENSE
 Language: ru
 Encoding: UTF-8
+RoxygenNote: 7.1.2
