--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(myTarGetGoalList)
 export(myTarGetFastStats)
 export(myTarGetInAppStats)
 export(myTarGetOfflineConversionsStats)
+export(myTarSetLogin)
+export(myTarSetTokenPath)
 importFrom(httr, GET)
 importFrom(httr, POST)
 importFrom(httr, stop_for_status)
