--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: rmytarget
 Type: Package
 Title: Load Data from 'MyTarget API v2 and v3'
 Version: 2.4.0
-Date: 2021-10-19
+Date: 2021-10-20
 Authors@R: 
     c(person(given  = "Alexey",
              family = "Seleznev",
@@ -12,12 +12,12 @@ Authors@R:
       person(given = "Netpeak",
              role = c("cph")))
 Maintainer: Alexey Seleznev <selesnow@gmail.com>
-Description: Allows work with 'MyTarget API v2' 
-	<https://target.my.com/doc/apiv2/ru/detailed.html> and 'MyTarget API v3'
-	<https://target.my.com/adv/api-marketing/doc/stat-v2#statisticsv3>
+Description: Allows work with 'MyTarget Statistics API v2' 
+	<https://target.my.com/adv/api-marketing/doc/stat-v2> and 
+	'MyTarget Statistics API v3' <https://target.my.com/adv/api-marketing/doc/stat-v2#statisticsv3>
 	load data by ads, campaigns, agency clients and statistic from
 	your ads account.
-URL: http://selesnow.github.io/rmytarget
+URL: https://selesnow.github.io/rmytarget/
 Imports: httr, dplyr, lubridate, stringr, purrr, tidyr
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
